# namizo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pubspec.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
android/app/: build.gradle.kts  key.properties.example  proguard-rules.pro
app/: .gitignore  components.json  drizzle.config.ts  package.json  svelte.config.js  tsconfig.json  vite.config.js
app/src/: app.d.ts  hooks.server.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  state.rs
app/src-tauri/src/commands/: anime.rs  jikan.rs  library.rs  logging.rs  mod.rs  playback.rs  stream.rs  tvdb.rs
core/: Cargo.toml
core/crates/namizo-core/: Cargo.toml
core/crates/namizo-core/src/: anime.rs  lib.rs
core/crates/namizo-core/src/services/: anime_service.rs  library_service.rs  mod.rs  stream_service.rs  tvdb_service.rs
core/crates/providers/: Cargo.toml
core/crates/providers/src/: allanime.rs  anidap.rs  animepahe.rs  anizone.rs  lib.rs  traits.rs
core/crates/providers/src/utils/: decryptor.rs  mod.rs  packer.rs  string_utils.rs
core/crates/streaming/: Cargo.toml
core/crates/streaming/src/: lib.rs
desktop/: .env.example  .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
lib/: main.dart
lib/core/: cache.dart  config.dart  configurations.dart  constants.dart  core.dart  defaults.dart  theme.dart  user_config.dart
lib/models/: models.dart  watchlist_item.dart
lib/providers/: dynamic_colors.dart  dynamiccolorsprovider.dart  home.dart  home_providers.dart  homeproviders.dart  language_preferences_provider.dart  languagepreferencesprovider.dart  media.dart  media_provider.dart  mediaprovider.dart  providers.dart  search.dart  search_provider.dart  searchprovider.dart  service_providers.dart  serviceproviders.dart  services.dart  settings.dart  settingsproviders.dart  watch_history.dart  watch_history_provider.dart  watchhistoryprovider.dart  watchlist.dart  watchlistprovider.dart
lib/routes/: routes.dart  shell.dart
lib/screens/: anilist_login_screen.dart  home_screen.dart  main_shell_screen.dart  media_detail_screen.dart  new_episodes_screen.dart  player_screen.dart  profile_screen.dart  search_screen.dart  (+2 more)
mobile/: pubspec.yaml
(+461 files in other folders)
