[package]
name = "namizo"
version = "0.1.0"
description = "Namizo — anime streaming app"
authors = ["NotMugil"]
edition = "2021"

[lib]
name = "namizo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

namizo-core = { path = "../crates/namizo-core" }
dotenvy = "0.15"

