[package]
name = "providers"
version = "0.1.0"
edition = "2024"

[dependencies]
domain      = { path = "../domain" }
anyhow      = "1"
async-trait = "0.1"
aes-gcm     = "0.10"
base64      = "0.22"
chrono      = { version = "0.4", features = ["clock"] }
once_cell   = "1"
rand        = "0.8"
regex       = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"] }
scraper     = "0.20"
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
urlencoding = "2"
serde = { version = "1", features = ["derive"] }