[package]
name = "providers"
version = "0.1.0"
edition = "2024"

[dependencies]
domain      = { path = "../domain" }
anyhow      = "1"
async-trait = "0.1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
